Add almost all styles

--- a/index.html
+++ b/index.html
@@ -14,21 +14,20 @@
         <div class="picture-container">
             <div class="banner">
                 <img src="./assets/fan-solid.svg" alt="PageLogo">
-                Sign-up Form
+                <h1>Sign-up Form</h1>
             </div>
-            <p>Photo by <a href="https://unsplash.com/@shanavaro">Shana Van Roosbroek</a> on <a href="https://unsplash.com/">Unsplash</a></p>
+            <p>Photo by&nbsp<a href="https://unsplash.com/@shanavaro">Shana Van Roosbroek&nbsp</a>on<a href="https://unsplash.com/"> &nbspUnsplash</a></p>
         </div>
         <div class="form">
             <div class="info">
-                This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.
-                
-                You know you want to.
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <span>now</span> to get started.</p>
+                <p>You <span>know</span> you want to.</p>
             </div>
             <form action="">
-                <header>
-                    <p>Let's do this!</p>
-                </header>
                 <fieldset>
+                    <header>
+                        <p>Let's do this!</p>
+                    </header>
                     <div class="input-group">
                         <div class="input-container">
                             <label for="first_name">First Name</label>
@@ -62,7 +61,7 @@
                 </fieldset>
                 <footer>
                     <button type="submit">Create Account</button>
-                    <p>Already have an account> <a href="#">Log in</a></p>
+                    <p>Already have an account? <a href="#">Log in</a></p>
                 </footer>
             </form>
         </div>
