--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/48026a7184.js" crossorigin="anonymous"></script>
     <title>Sign-Up Form</title>
 </head>
 
@@ -13,8 +14,13 @@
     <div class="container">
         <div class="picture-container">
             <div class="banner">
-                <img src="./assets/fan-solid.svg" alt="PageLogo">
-                <h1>Sign-up Form</h1>
+                <div>
+                    <img src="./assets/fan-solid.svg" alt="PageLogo">
+                    <h1>Sign-up Form</h1>
+                </div>
+                <div>
+                    <span>Created by <a href="https://github.com/jonhatanh" target="_blank">jonhatanh <i class="fa-brands fa-github"></i></a></span>
+                </div>
             </div>
             <p>Photo by&nbsp<a href="https://unsplash.com/@shanavaro">Shana Van Roosbroek&nbsp</a>on<a href="https://unsplash.com/"> &nbspUnsplash</a></p>
         </div>
